VulnVersion/tests/vet_taxonomy_corpus/work/linux/CVE-2024-26660/step1/fix_evidence/58fca355ad37/show_name_status.txt
commit 58fca355ad37dcb5f785d9095db5f748b79c5dc2
Author:     Srinivasan Shanmugam <srinivasan.shanmugam@amd.com>
AuthorDate: Wed Feb 7 10:20:57 2024 +0530
Commit:     Alex Deucher <alexander.deucher@amd.com>
CommitDate: Wed Feb 7 18:30:04 2024 -0500

    drm/amd/display: Implement bounds check for stream encoder creation in DCN301
    
    'stream_enc_regs' array is an array of dcn10_stream_enc_registers
    structures. The array is initialized with four elements, corresponding
    to the four calls to stream_enc_regs() in the array initializer. This
    means that valid indices for this array are 0, 1, 2, and 3.
    
    The error message 'stream_enc_regs' 4 <= 5 below, is indicating that
    there is an attempt to access this array with an index of 5, which is
    out of bounds. This could lead to undefined behavior
    
    Here, eng_id is used as an index to access the stream_enc_regs array. If
    eng_id is 5, this would result in an out-of-bounds access on the
    stream_enc_regs array.
    
    Thus fixing Buffer overflow error in dcn301_stream_encoder_create
    reported by Smatch:
    drivers/gpu/drm/amd/amdgpu/../display/dc/resource/dcn301/dcn301_resource.c:1011 dcn301_stream_encoder_create() error: buffer overflow 'stream_enc_regs' 4 <= 5
    
    Fixes: 3a83e4e64bb1 ("drm/amd/display: Add dcn3.01 support to DC (v2)")
    Cc: Roman Li <Roman.Li@amd.com>
    Cc: Rodrigo Siqueira <Rodrigo.Siqueira@amd.com>
    Cc: Aurabindo Pillai <aurabindo.pillai@amd.com>
    Signed-off-by: Srinivasan Shanmugam <srinivasan.shanmugam@amd.com>
    Reviewed-by: Roman Li <roman.li@amd.com>
    Signed-off-by: Alex Deucher <alexander.deucher@amd.com>

M	drivers/gpu/drm/amd/display/dc/resource/dcn301/dcn301_resource.c
